assets/css/public/lbcc.css
/* ... */
div.vid_container h3 {
  font-size: 1.3em;
  color: #B0CBE8 !important;
  margin-top: 10px;
  cursor: pointer;
}

div.vid_container p {
  font-size: 1em;
  color: #fff;
  margin-top: 0;
}

div.vid_container a {
  color: #B0CBE8;
  cursor: pointer;
}

div.vid_container p.runtime {font-size: smaller; margin-bottom: 15px;}

.video_thumb {
  float: left;
  margin-right: 25px;
  margin-bottom: 20px;
  background-color: #333;
  cursor: pointer;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  padding: 5px;
}

div.video_thumb img {
  float: left;

}
.video_list {
  clear: both; float: left; width: 500px;
}




/* these .ui class overrides tweak border and spacing of tab containers */
.ui-content {
    border: none !important;
}

.ui-state-active {
    background: #79A4D4 !important;
}
.hometab {
    
}

/* DZ's fixes to  make the home icon work properly */
/* DZ when on another tab */

.ui-state-default .hometab {
    
    /*background: url(../../images/icons/home-active.png) no-repeat center center !important;*/
}

 
/* DZ - When hovering on this tab */
.ui-state-hover .hometab

{
    
    /*background: url(../../images/icons/home-hover.png) no-repeat center center !important;*/
}

/* DZ -  When on this tab */
.ui-state-active .hometab, .ui-state-focus .hometab {
    
   /* background: url(../../images/icons/home-white.png) no-repeat center center !important;*/    
    color: #FFF !important;
}

.dropspotty.ui-state-active {background-color: rgba(51, 51, 51, 0.7) !important; color: #FFF !important;}
.dropspotty.ui-state-active a {color: #FFF !important;}


.bullet {
height:55px;
width:55px;
}


.staff-info {
    float:left;
}



.float-left {
    float:left;
}

.ts-blackwhite, .ts-umgreen
{
    background-color:black;
    color:white;
}

.ts-whiteblack
{
    background-color:white;
    color:black;
}

.noshow {display: none;}



/* Catalog Pluslet Display - Front-end */

.catalog-search {width:100%; margin: 0;}

.catalog-search .adv-prompt a{font-size: 0.8em;}



/* Social Media Pluslet - Front-end*/
#social_media_accounts ul {list-style-type: none; margin: 0; padding: 0;}

#social_media_accounts ul li { display: inline; }

#social_media_accounts ul li a { text-decoration: none; padding: .2em 0.3em .2em 0; font-size: 26px; color: rgba(51,51,51,0.7);}
#social_media_accounts ul li a:hover { color: rgba(51,51,51,1);}




/* Hide Expand/Collapse Pluslets - Front-end*/
#expand_tab {display: none !important;}



/* Subject Specialist Pluslet - NEW - Front-end*/
.subjectSpecialistPlusletOld {margin: 0 0 12px 0; display: block; padding-bottom: 10px;}
.subjectSpecialistPluslet {margin: 0 0 12px 0; display: block; border-bottom: 1px dashed #CCC; padding-bottom: 10px;}


.staff-image {width: 90px; float:left; display: inline-block; margin-right: 10px; }

.staff-photo {width: 70px; height: 70px; border: 1px solid #d5d5d5; padding: 3px; background-color: #E1E0DC;}

.staff-content {
  float:left; 
  display: inline-block;
  width: calc(100% - 110px);
  width: -moz-calc(100% - 110px);
  width: -webkit-calc(100% - 110px);
}

.staff-details {list-style-type: none; margin: 0 !important; padding: 0; display: inline-block; }
.staff-details h4 {font-weight: bold; margin-bottom: 6px;}
.staff-details li {margin: 0 !important; display: block !important; white-space: pre-wrap;   white-space: -moz-pre-wrap;   
   white-space: -o-pre-wrap;  word-wrap: break-word; }

.staff-social {padding: .2em 0.2em .2em 0; font-size: 26px; display: inline-block;}
.staff-social  a {text-decoration: none; color: rgba(51,51,51,0.7) !important;}
.staff-social a:hover { color: rgba(51,51,51,1) !important;}


/* WorldCat Pluslet - Front-end */
#div-search { width: 100%;}

#wcfw p {margin:0 0 0.5em 0;}

#wcfw #box {margin: 0 10px 0 0;}

#wcfw input {margin-bottom: 4px;}

/* tab style */
.pluslet_body ul.shadetabs {padding: 3px 0 !important; font-size: 1em !important; font-weight: normal !important; list-style-type: none !important; text-align: left !important; margin: 10px 0 0 0 !important;}
.pluslet_body ul.shadetabs li {display: inline-block !important; margin: 0 0 12px 0 !important; font-size: 0.9em !important;}
.pluslet_body ul.shadetabs li a{text-decoration: none !important; position: relative !important; z-index: 1 !important; padding: 3px 7px !important; margin-right: 3px !important; border: 1px solid #CCC !important; color: #333 !important; cursor:pointer !important; border-radius: 2px !important;}
.pluslet_body ul.shadetabs li a:visited{color: #333 !important;}
.pluslet_body ul.shadetabs li a:hover{text-decoration: underline !important; color: #000 !important;}
.pluslet_body ul.shadetabs li a.selected{position: relative !important; top: 1px !important; color: #333 !important; background: #d5d5d5 !important; cursor:text !important;}
.pluslet_body ul.shadetabs li a.selected:hover{text-decoration: none !important;}


#journalsearch {margin-top: 0;}

.wcat-label {font-weight: normal; font-size: 0.9em; margin: 0 !important;}

#bottomdiv {
  padding: 0.2em 0 0.2em 10px; 
  background: url(https://www.worldcat.org/searchbox/images/wclocal_srchwc.gif?ai=SubjectsPlus) 98% bottom no-repeat;}

#bottomdiv a {font-size: 0.8em;}

/* Pure Form overrides - PV */
.pluslet_body .pure-form input,
.pluslet_body .pure-form select,
.pluslet_body .pure-form textarea {
  border-radius: 2px !important;
  border: 1px solid #bcbbbb !important;
  box-shadow: none !important;
  padding: 4px !important;
  margin-bottom: 6px;
  width: 50%;
  white-space: nowrap;
}
/* ... */

